# Crawler

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
src/: CurlManager.cpp  Tags.cpp  Utilities.cpp  WebPage.cpp  main.cpp
src/ext/libs/zlib/: zlib.lib
src/inc/: CurlManager.hpp  Logger.hpp  Tags.hpp  Utilities.hpp  WebPage.hpp
